# self-chinese-building-listening-materials

./: .gitignore  INSTALLATION.md  README.md  pyproject.toml
.github/workflows/: build-app-win.yml
app/: .gitignore  README.md  package.json
app/backend/listening_backend/: config.py  jobs.py
app/backend/listening_backend/api/: media.py
app/backend/listening_backend/pipeline/: youtube.py
app/backend/scripts/: run.ps1  run.sh
app/electron/: package.json
app/frontend/: practice.html
app/frontend/js/: practice.js
app_win/: .gitignore  README.md  package.json
app_win/backend/: pyproject.toml
app_win/backend/listening_backend/: config.py  jobs.py
app_win/backend/listening_backend/pipeline/: youtube.py
app_win/backend/pyinstaller/: listening_backend.spec
app_win/backend/scripts/: build_exe.ps1
app_win/electron/: main.js  package.json
app_win/frontend/css/: style.css
app_win/frontend/js/: api.js  library.js
app_win/resources/scripts/: download_ffmpeg.ps1
configs/: scripts.yml  system.yml  url.yml
data/transcripts/: hBPECevVz-k.json
docs/: architecture.md  configuration.md  conventions.md  data-format.md
frontend/: app.js  index.html  style.css
scripts/: setup_venv.sh
services/generateContents/: export.py  pipeline.py  webapp.py  word_export.py
services/generateContents/common/: audio.py  config.py  logger.py  pinyin_converter.py  schema.py  segmentation.py  sentence_split.py  transcript_store.py  word_hsk_lookup.py
services/generateContents/modules/audio2script/: run.py  service.py
(+16 files in other folders)
