[project]
name = "generateContents"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "pyyaml",
    "yt-dlp",
    "faster-whisper",
    "pypinyin",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "edge-tts",
    "pydub",
    "jieba",
    "flask",
    "audioop-lts; python_version >= '3.13'",
]

[tool.setuptools.packages.find]
where = ["services"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
